Fixed table overflow

--- a/frontend/src/app/components/main-page/components/level-transactions-table/level-transactions-table.component.sass
+++ b/frontend/src/app/components/main-page/components/level-transactions-table/level-transactions-table.component.sass
@@ -27,6 +27,7 @@
     border-width: 2px
     border-radius: 20px
     border-color: color(gray-2)
+    overflow: auto
 
 .table-columns
     font-weight: 550
